// Vitest Snapshot v1

exports[`CdrChipGroup > default configuration > renders correctly 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend--hidden"
  >
    <!-- @slot Override CdrChip label content with a custom element -->
    
    test
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    <!-- @slot CdrChipGroup content (CdrChip components) -->
    
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 2
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 3
        
      </span>
    </button>
    
  </div>
</fieldset>
`;

exports[`CdrChipGroup > when current index is set > renders correctly 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend--hidden"
  >
    <!-- @slot Override CdrChip label content with a custom element -->
    
    test
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    <!-- @slot CdrChipGroup content (CdrChip components) -->
    
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 2
        
      </span>
    </button>
    
  </div>
</fieldset>
`;

exports[`CdrChipGroup > when label is visible > renders correctly 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend"
  >
    <!-- @slot Override CdrChip label content with a custom element -->
    
    test
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    <!-- @slot CdrChipGroup content (CdrChip components) -->
    
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 2
        
      </span>
    </button>
    
  </div>
</fieldset>
`;

exports[`CdrChipGroup > with label slot > renders correctly 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend"
  >
    <!-- @slot Override CdrChip label content with a custom element -->
    
    hey im overriding here!!!
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    <!-- @slot CdrChipGroup content (CdrChip components) -->
    
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        <!-- @slot Primary CdrChip content -->
        
        chip 2
        
      </span>
    </button>
    
  </div>
</fieldset>
`;
